# minni

./: .coveragerc  .dockerignore  .env.example  .gitfilters  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PACKAGING_PLAN.md  README.md  RECALL_FIX_REPORT.md  SECURITY.md  SECURITY_PLAN.md  agent-compatibility.config.json  next-agent-prompt.md  patch.diff  pyproject.toml  workflow-state.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: README.md  pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  install_problem.md
.github/workflows/: ci.yml  docker.yml  pr-hygiene.yml  release.yml
antigravity/package/: PHASE_012_PASS2_IMPLEMENT_PROMPT.md  PHASE_012_REVIEW_PROMPT.md
artifacts/11-handoff/: cold-resume.txt
assets/brand/: brand-system.html
bench/: .gitignore  README.md  _verify_semantic_recall.py  bisect_harness.py  conftest.py
bench/membench/: __init__.py  agent.py  api_budget.py  config.py  contract.py  corpus.py  efficiency.py  episodes.py  goldset.py  judge.py  label_cli.py  layer2_prompt.py  metrics.py  paths.py  report.py  scrub.py  (+7 more)
claudecode-vault/: CLAUDE_CODE_HOSTED_AGENT_ENVELOPE.md  index.md
codex/: README.md
docs/: ARCHITECTURAL-REVIEW-ROADMAP.md  CANONICAL-PATHS.md  ENGINEERING-REVIEW.md  MINNI_DREAM_PASS_DESIGN.md  MINNI_HYGIENE_BACKLOG.md  MINNI_PLAN_DESIGN.md  OBSERVED-USAGE.md  PANEL_EVAL_STABILIZATION.md  RC_MASTER_PLAN_CODEX.md  RC_MASTER_PLAN_GEMINI.md  RC_MASTER_PLAN_Grok.md  RC_PLAN.md  README.md  TROUBLESHOOTING.md  VAULT_INGEST.md  architecture-detailed.d2  architecture.md  concepts.md  goal-native-afm.md  install.md  native-afm-implementation-note.md  runtime-integration.md  security.md
engine/: .coveragerc  afm_chunking.py  afm_provider.py  afm_writer.py  agent_api.py  ax_memory.py  chunker.py  config.py  conftest.py  db.py  decay.py  episodic.py  faiss_index.py  faiss_persist.py  graph_export.py  hyde.py  hygiene.py  index_all.py  indexer.py  migrate_v3_to_v3_1.py  migrations.py  minnid.py  minnid_client.py  model_provider.py  models.py  native_afm_helper  native_afm_helper.swift  obs.py  principal.py  pyproject.toml  query_expand.py  requirements.txt  retire_stray_identity_wiki_doc.py  retrieval.py  ruff.toml  safety.py  seed_identity.py  sovereign_memory.py  sovrd.py  sovrd_client.py  (+103 more)
engine/afm_passes/: _graph_utils.py  consolidation.py  inbox_archive.py  inbox_ingest.py  pruning.py  session_distillation.py  synthesis.py  vault_ingest.py
engine/afm_prompts/: procedure_extraction.md
engine/data/: synonyms.yml
engine/eval/: __init__.py  harness.py  metrics.py  retrievers.py
engine/launchd/: com.minni.minnid.plist.example  com.openclaw.sovrd.plist.example
engine/migrations/: 007_handoff_contradiction_events.sql  009_contradiction_log.sql  011_learnings_fts_sync_triggers.sql  012_agent_id_tag_hygiene.sql  013_candidate_and_main_identity_unification.sql
engine/minnid_runtime/: __init__.py  afm.py  ax.py  dispatch.py  governance.py  handoff.py  health.py  provenance.py  recall.py  redaction.py  rpc.py  vault_index.py
engine/principal_templates/: claude-code.json  codex.json  grok-build.json  kilocode.json
engine/tools/: ingest_inbox_candidates.py
eval/: reviewed_seed.jsonl
evidence/: codex-findings-triage-2026-07-02.md
openclaw-extension/: README.md  migrate_phase2.py  openclaw.plugin.json  package.json  sovrd.py
scripts/: afm-sovereign-scenarios.mjs  afm-swift-knowledge.mjs  check-migrations.sh  check-public-boundary.sh  check_versions.py  inbox_cleanup.py  repro-smoke.sh  stage_payload.py
tests/: conftest.py  test_afm_chunking.py  test_afm_consolidation_privacy.py  test_afm_contract_golden.py  test_afm_health.py  test_afm_loop_promotion.py  test_afm_privacy_stamping.py  test_afm_provider.py  test_afm_synthesis_instruction_like_inheritance.py  test_agent_id_validation.py  test_agent_tag_hygiene_migration.py  test_approval_rpc.py  test_attribution_recall.py  test_audit_escape.py  test_ax_memory.py  test_can_read_document.py  test_candidate_lifecycle.py  test_check_versions.py  test_codex_security_slices.py  test_config.py  test_correction_reinjection.py  test_db_schema_init_concurrency.py  test_durable_semantic_index.py  test_evidence_envelope.py  test_frontmatter_security.py  test_g01_numpy_env.py  test_handoff_wikilink_containment.py  test_identity_multidoc_read.py  test_inbox_archive.py  test_inbox_cleanup.py  test_inbox_cleanup_integration.py  test_inbox_ingest.py  test_inbox_quarantine.py  test_issue_121_diagnostic_denials.py  test_learn_default_proposal.py  test_learn_force_requires_operator.py  test_learnings_fts_triggers.py  test_list_events.py  test_log_event_success_path.py  test_m3_privacy_bridge.py  (+78 more)
(+583 files in other folders)
