# Packaging metadata for the Minni engine (PACKAGING_PLAN.md §3).
#
# v0.1 scope: this makes the repo checkout installable (`pip install -e engine/`
# gives you the `minni` console script) and carries the canonical metadata.
# It deliberately packages ONLY the stdlib-only entry modules (`minni_cli`,
# `minnid_client`): the engine itself keeps its flat module layout (db.py,
# models.py, …), which is not safe to ship as a wheel's top-level modules.
# Publishing to PyPI is gated on the approved v0.2 engine/ -> minni/ package
# rename (PACKAGING_PLAN.md §6.1).

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "minni"
version = "0.1.0"
description = "Minni (ᛗ): local-first, multi-agent memory daemon — recall is evidence, not instruction."
readme = { text = "Minni is a local-first, multi-agent memory daemon. Full documentation: https://github.com/infektyd/minni", content-type = "text/markdown" }
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "infektyd" }]
keywords = ["memory", "agents", "mcp", "local-first", "daemon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Runtime dependencies mirror engine/requirements.txt (the source spec).
# Reproducible installs use engine/requirements.lock (make setup, CI).
dependencies = [
    "sentence-transformers>=5.6.0",
    "numpy>=2.5.0,<3.0",
    "faiss-cpu>=1.14.3",
    "tiktoken>=0.13.0",
    "rank-bm25>=0.2.2",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[project.scripts]
minni = "minni_cli:main"

[project.urls]
Homepage = "https://github.com/infektyd/minni"
Repository = "https://github.com/infektyd/minni"
Issues = "https://github.com/infektyd/minni/issues"
Security = "https://github.com/infektyd/minni/blob/main/SECURITY_PLAN.md"

[tool.setuptools]
py-modules = ["minni_cli", "minnid_client"]
